Try full-screen for title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
       <title>Wants full-screen</title>
    </head>
    <body id="the-body">
-      <h1>Wants full-screen</h1>
-      <button onclick="document.getElementById('the-body').requestFullscreen();">Go full-screen!</button>
+      <h1 id="the-title">Wants full-screen</h1>
+      <button onclick="document.getElementById('the-body').requestFullscreen();">Go full-screen for body!</button>
+      <button onclick="document.getElementById('the-title').requestFullscreen();">Go full-screen for title!</button>
    </body>
 </html>
