--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    </head>
    <body id="the-body">
       <h1 id="the-title">Wants full-screen</h1>
-      <button onclick="document.getElementById('the-body').requestFullscreen();">Go full-screen for body!</button>
+      <button onclick="document.documentElement.requestFullscreen();">Go full-screen!</button>
       <button onclick="document.getElementById('the-title').requestFullscreen();">Go full-screen for title!</button>
    </body>
 </html>
