--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
    </head>
    <body id="the-body">
       <h1 id="the-title">Wants full-screen</h1>
+      <video id="the-video">
       <button onclick="document.documentElement.webkitRequestFullscreen();">Go full-screen!</button>
       <button onclick="document.getElementById('the-title').webkitRequestFullscreen();">Go full-screen for title!</button>
+      <button onclick="document.getElementById('the-video').webkitRequestFullscreen();">Go full-screen for video!</button>
    </body>
 </html>
