--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <title>Wants full-screen</title>
    </head>
    <body id="the-body">
-      <h1 id="the-title">Wants full-screen</h1>
-      <video width="320" height="240" controls id="the-video">
+      <h1 id="the-title">Wants full-screen (with attributes)</h1>
+      <video width="320" height="240" controls id="the-video" allowfullscreen webkitallowfullscreen mozallowfullscreen>
          <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
          <source src="https://www.w3schools.com/html/movie.ogg" type="video/ogg">
          Your browser does not support the video tag.
