--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Wants full-screen</title>
+      <title>iframe</title>
    </head>
    <body>
-      <h1>Wants full-screen</h1>
-      <video width="320" height="240" controls id="the-video">
-         <source src="https://www.w3schools.com/html/movie.mp4" type="video/mp4">
-         <source src="https://www.w3schools.com/html/movie.ogg" type="video/ogg">
-         Your browser does not support the video tag.
-      </video>
-      <button onclick="document.getElementById('the-video').webkitRequestFullscreen();">View video in full-screen!</button>
+      <h1>iframe</h1>
+      <iframe src="index.html" width="400" height="300"></iframe>
    </body>
 </html>
