Full-screen in frameset?

--- a/frameset.html
+++ b/frameset.html
@@ -1,4 +1,4 @@
 <frameset cols="50%,*">
    <frame src="index.html">
-   <frame src="index.html">
+   <frame src="index.html" allowfullscreen webkitallowfullscreen mozallowfullscreen>
 </frameset>
